--- a/website/c/womens-1.html
+++ b/website/c/womens-1.html
@@ -1,19 +1,19 @@
-<!-- index.html -->
+
+<!-- category.html -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Low Code Sample - Home</title>
+  <title>Category Page</title>
   <link rel="stylesheet" href="style.css" />
   <script src="https://media.richrelevance.com/rrserver/zerocode/1698/rr_express.js"></script>
-
 </head>
 <body>
   <header>
     <h1>Sample Store</h1>
     <nav>
-      <a href="index.html">Home</a>
+      <a href="../index.html">Home</a>
       <a href="./c/women-1.html">Womens Category Page</a>
       <a href="./c/men-2.html">Mens Category Page</a>
       <a href="./p/t_shirt-1234.html">Product Page</a>
@@ -21,8 +21,17 @@
     </nav>
   </header>
   <div class="container">
-    <h2>Welcome to the Sample Store</h2>
-    <p>This is a demo store to illustrate low code integration.</p>
+    <h2>Men's Shirts</h2>
+    <div class="product-card">
+      <p><strong>Blue Shirt</strong></p>
+      <p>$25.00</p>
+      <a href="pdp.html?product=blue-shirt">View Product</a>
+    </div>
+    <div class="product-card">
+      <p><strong>White Shirt</strong></p>
+      <p>$30.00</p>
+      <a href="pdp.html?product=white-shirt">View Product</a>
+    </div>
   </div>
 </body>
 </html>
