--- a/website/cart.html
+++ b/website/cart.html
@@ -14,8 +14,9 @@
     <h1>Sample Store</h1>
     <nav>
       <a href="index.html">Home</a>
-      <a href="category.html">Category Page</a>
-      <a href="pdp.html">Product Page</a>
+      <a href="./c/women-1.html">Womens Category Page</a>
+      <a href="./c/men-2.html">Mens Category Page</a>
+      <a href="./p/t_shirt-1234.html">Product Page</a>
       <a href="cart.html">Cart</a>
     </nav>
   </header>
