--- a/website/p/t_shirt-1234.html
+++ b/website/p/t_shirt-1234.html
@@ -13,9 +13,10 @@
   <header>
     <h1>Sample Store</h1>
     <nav>
-      <a href="index.html">Home</a>
-      <a href="category.html">Category Page</a>
-      <a href="pdp.html">Product Page</a>
+      <a href="../index.html">Home</a>
+      <a href="./c/women-1.html">Womens Category Page</a>
+      <a href="./c/men-2.html">Mens Category Page</a>
+      <a href="./p/t_shirt-1234.html">Product Page</a>
       <a href="cart.html">Cart</a>
     </nav>
   </header>
