--- a/website/c/men-2.html
+++ b/website/c/men-2.html
@@ -6,7 +6,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Category Page</title>
-  <link rel="stylesheet" href="style.css" />
+  <link rel="stylesheet" href="../style.css" />
   <script src="https://media.richrelevance.com/rrserver/zerocode/1698/rr_express.js"></script>
 </head>
 <body>
@@ -14,10 +14,10 @@
     <h1>Sample Store</h1>
     <nav>
       <a href="../index.html">Home</a>
-      <a href="./c/women-1.html">Womens Category Page</a>
-      <a href="./c/men-2.html">Mens Category Page</a>
-      <a href="./p/t_shirt-1234.html">Product Page</a>
-      <a href="cart.html">Cart</a>
+      <a href="./women-1.html">Womens Category Page</a>
+      <a href="./men-2.html">Mens Category Page</a>
+      <a href="../p/t_shirt-1234.html">Product Page</a>
+      <a href="../cart.html">Cart</a>
     </nav>
   </header>
   <div class="container">
