--- a/website/p/t_shirt-1234.html
+++ b/website/p/t_shirt-1234.html
@@ -7,17 +7,17 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <script src="https://media.richrelevance.com/rrserver/zerocode/1698/rr_express.js"></script>
   <title>Product Detail Page</title>
-  <link rel="stylesheet" href="style.css" />
+  <link rel="stylesheet" href="../style.css" />
 </head>
 <body>
   <header>
     <h1>Sample Store</h1>
     <nav>
       <a href="../index.html">Home</a>
-      <a href="./c/women-1.html">Womens Category Page</a>
-      <a href="./c/men-2.html">Mens Category Page</a>
-      <a href="./p/t_shirt-1234.html">Product Page</a>
-      <a href="cart.html">Cart</a>
+      <a href="../c/women-1.html">Womens Category Page</a>
+      <a href="../c/men-2.html">Mens Category Page</a>
+      <a href="./t_shirt-1234.html">Product Page</a>
+      <a href="../cart.html">Cart</a>
     </nav>
   </header>
   <div class="container">
