--- a/website/p/t_shirt-1234.html
+++ b/website/p/t_shirt-1234.html
@@ -5,7 +5,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <script src="https://media.richrelevance.com/rrserver/zerocode/1698/rr_express.js"></script>
+  <script src="https://media.algorecs.com/rrserver/zerocode/1698/rr_express.js"></script>
   <title>Product Detail Page</title>
   <link rel="stylesheet" href="../style.css" />
 </head>
