--- a/website/index.html
+++ b/website/index.html
@@ -11,7 +11,7 @@
 </head>
 <body>
   <header>
-    <h1>Sample Store</h1>
+    <h1>Sample Store Example</h1>
     <nav>
       <a href="index.html">Home</a>
       <a href="./c/women-1.html">Womens Category Page</a>
