--- a/website/index.html
+++ b/website/index.html
@@ -4,14 +4,14 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Low Code Sample - Home</title>
+  <title>Low Code Sample - Home Example</title>
   <link rel="stylesheet" href="style.css" />
   <script src="https://media.richrelevance.com/rrserver/zerocode/1698/rr_express.js"></script>
 
 </head>
 <body>
   <header>
-    <h1>Sample Store Example</h1>
+    <h1>Home - Sample Store Example</h1>
     <nav>
       <a href="index.html">Home</a>
       <a href="./c/women-1.html">Womens Category Page</a>
